[project]
name = "gemini-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.0",
    "langchain-core==1.1.0",
    "langchain-google-genai==3.2.0",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "pydantic>=2.12.5",
    "requests>=2.32.0",
    "spacy>=3.8.11",
]
